--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Coca-Cola</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Coca-Cola</a>
+            <a class="navbar-brand" href="#">
+                <img class="img-fluid" src="imgs/coke%20logo.png" alt="Coke Logo">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -41,7 +44,49 @@
             </div>
         </div>
     </nav>
-    
+    <br>
+    <main class="container-fluid">
+        <header class="header-image col-sm-12"><img class="img-fluid" src="imgs/coca-cola-background.jpg" alt="2 Coca Cola bottles">
+            <div>
+                <h1>Coca Cola Great Britain</h1>
+                <h2>Founded by Dr John S Pemberton</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda at dolores ea eius fugiat illo impedit iste iusto laborum maxime nemo optio perspiciatis porro repudiandae sapiente suscipit, veritatis vero vitae.</p>
+            </div>
+        </header>
+        <div class="cards row">
+            <div class="card col-sm-4">
+                <img class="img-fluid" src="imgs/fanta.jpg" alt="">
+                <div class="card-body">
+                    <h4>Fanta</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consequuntur culpa delectus error harum illum quam quis reiciendis sequi similique. Commodi dignissimos enim eum labore similique? Deleniti mollitia saepe tenetur.</p>
+                    <a href="">Find out more...</a></div>
+            </div>
+            <div class="card col-sm-4">
+                <img class="img-fluid" src="imgs/appletiser.jpg" alt="">
+                <div class="card-body">
+                    <h4>Appletiser</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus assumenda culpa dolore id ipsa libero mollitia pariatur quas quos, recusandae suscipit ullam. Accusantium dolores eaque minus nesciunt tempore. In, libero.</p>
+                    <a href="">Find out more...</a></div>
+            </div>
+            <div class="card col-sm-4">
+                <img class="img-fluid" src="imgs/costa.png" alt="">
+                <div class="card-body">
+                    <h4>Costa-Coffee</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti odit optio quia. Ab aperiam cupiditate eaque eum, inventore iure laudantium magnam, maxime necessitatibus omnis qui quisquam reiciendis repellendus sed voluptas?</p>
+                    <a href="">Find out more...</a></div>
+            </div>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="copy-info">&copy; Web 3D Applications</div>
+            <div class="social-links">
+                <a href=""><img class="img-fluid" src="" alt=""></a>
+                <a href=""><img class="img-fluid" src="" alt=""></a>
+                <a href=""><img class="img-fluid" src="" alt=""></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
 
