created base fanta page with orange background colour and linked it to the index page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Appletiser</a></li>
-                                <li><a class="dropdown-item" href="#">Fanta</a></li>
+                                <li><a class="dropdown-item" href="/fanta.html">Fanta</a></li>
                                 <li><a class="dropdown-item" href="#">Costa</a></li>
                             </ul>
                         </li>
