created base pages for each drink and linked them

--- a/fanta.html
+++ b/fanta.html
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            <a class="nav-link" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
@@ -33,9 +33,9 @@
                                 Drinks
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Appletiser</a></li>
-                                <li><a class="dropdown-item" href="/fanta.html">Fanta</a></li>
-                                <li><a class="dropdown-item" href="#">Costa</a></li>
+                                <li><a class="dropdown-item" href="/appletiser.html">Appletiser</a></li>
+                                <li><a class="dropdown-item active" href="/fanta.html">Fanta</a></li>
+                                <li><a class="dropdown-item" href="/costa.html">Costa</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -56,7 +56,12 @@
         </div>
     </header>
     <main>
-    
+        <div class="model">
+            Model
+        </div>
+        <div>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto beatae eos placeat! Assumenda aut earum enim eum, laboriosam modi nam, natus rerum sed tenetur, ullam.
+        </div>
     </main>
     <footer class="footer">
         <div class="container">
