--- a/costa.html
+++ b/costa.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header-image col-sm-12">
+    <header class="header-image col-sm-12" id="appletiser">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid navbar-container">
                 <a class="navbar-brand" href="#">
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
@@ -33,9 +33,9 @@
                                 Drinks
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Appletiser</a></li>
-                                <li><a class="dropdown-item" href="#">Fanta</a></li>
-                                <li><a class="dropdown-item" href="/costa.html">Costa</a></li>
+                                <li><a class="dropdown-item" href="/appletiser.html">Appletiser</a></li>
+                                <li><a class="dropdown-item" href="/fanta.html">Fanta</a></li>
+                                <li><a class="dropdown-item active" href="/costa.html">Costa</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -47,7 +47,7 @@
         </nav>
         <div class="header-content">
             <div>
-                <h1>Coca Cola Great Britain</h1>
+                <h1>Costa</h1>
                 <h2>Founded by Dr John S Pemberton</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda at dolores ea eius fugiat illo
                     impedit iste iusto laborum maxime nemo optio perspiciatis porro repudiandae sapiente suscipit,
@@ -56,7 +56,12 @@
         </div>
     </header>
     <main>
-    
+        <div class="model">
+            Model
+        </div>
+        <div>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto beatae eos placeat! Assumenda aut earum enim eum, laboriosam modi nam, natus rerum sed tenetur, ullam.
+        </div>
     </main>
     <footer class="footer">
         <div class="container">
