--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                                 Drinks
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Appletiser</a></li>
+                                <li><a class="dropdown-item" href="/appletiser.html">Appletiser</a></li>
                                 <li><a class="dropdown-item" href="/fanta.html">Fanta</a></li>
-                                <li><a class="dropdown-item" href="#">Costa</a></li>
+                                <li><a class="dropdown-item" href="/costa.html">Costa</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
