--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
         </nav>
         <div class="header-content">
             <div>
-                <h1>Coca Cola Great Britain</h1>
+                <h1>About</h1>
                 <h2>Founded by Dr John S Pemberton</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda at dolores ea eius fugiat illo
                     impedit iste iusto laborum maxime nemo optio perspiciatis porro repudiandae sapiente suscipit,
@@ -56,7 +56,7 @@
         </div>
     </header>
     <main>
-    
+        
     </main>
     <footer class="footer">
         <div class="container">
