--- a/about.html
+++ b/about.html
@@ -11,63 +11,69 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header-image col-sm-12">
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid navbar-container">
-                <a class="navbar-brand" href="#">
-                    <img class="img-fluid" src="imgs/coke%20logo.png" alt="Coke Logo">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/about.html">About</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Drinks
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Appletiser</a></li>
-                                <li><a class="dropdown-item" href="#">Fanta</a></li>
-                                <li><a class="dropdown-item" href="#">Costa</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" tabindex="-1">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="header-content">
-            <div>
-                <h1>About</h1>
-                <h2>Founded by Dr John S Pemberton</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda at dolores ea eius fugiat illo
-                    impedit iste iusto laborum maxime nemo optio perspiciatis porro repudiandae sapiente suscipit,
-                    veritatis vero vitae.</p>
+<header class="header-image col-sm-12" id="coca-cola">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid navbar-container">
+            <a class="navbar-brand" href="#">
+                <img class="img-fluid" src="imgs/coke%20logo.png" alt="Coke Logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about.html">About</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Drinks
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Appletiser</a></li>
+                            <li><a class="dropdown-item" href="#">Fanta</a></li>
+                            <li><a class="dropdown-item active" href="#">Costa</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" tabindex="-1">Contact</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </header>
-    <main>
-        
-    </main>
-    <footer class="footer">
-        <div class="container">
-            <div class="copy-info">&copy; Web 3D Applications</div>
-            <div class="social-links">
-                <a href=""><img class="img-fluid" src="" alt=""></a>
-                <a href=""><img class="img-fluid" src="" alt=""></a>
-                <a href=""><img class="img-fluid" src="" alt=""></a>
-            </div>
+    </nav>
+    <div class="header-content">
+        <div>
+            <h1>About</h1>
+            <h2>Founded by Dr John S Pemberton</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda at dolores ea eius fugiat illo
+                impedit iste iusto laborum maxime nemo optio perspiciatis porro repudiandae sapiente suscipit,
+                veritatis vero vitae.</p>
         </div>
-    </footer>
+    </div>
+</header>
+<main>
+    <div class="about">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam atque culpa delectus dignissimos, dolorem ducimus facilis incidunt maxime neque nisi nostrum numquam obcaecati quos sapiente soluta sunt unde vel veniam.
+    </div>
+    <br>
+    <div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto beatae eos placeat! Assumenda aut earum enim eum, laboriosam modi nam, natus rerum sed tenetur, ullam.
+    </div>
+</main>
+<footer class="footer">
+    <div class="container">
+        <div class="copy-info">&copy; Web 3D Applications</div>
+        <div class="social-links">
+            <a href=""><img class="img-fluid" src="" alt=""></a>
+            <a href=""><img class="img-fluid" src="" alt=""></a>
+            <a href=""><img class="img-fluid" src="" alt=""></a>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
 
