Added all base content for drinks pages

--- a/template.html
+++ b/template.html
@@ -35,7 +35,7 @@
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Appletiser</a></li>
                                 <li><a class="dropdown-item" href="#">Fanta</a></li>
-                                <li><a class="dropdown-item" href="/costa.html">Costa</a></li>
+                                <li><a class="dropdown-item" href="./costa.html">Costa</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
